// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-evcjhq gzaCbu sc-fHeRUh cTzQCH"
      color="#fff"
    >
      <div
        class="sc-brSvTw gdvvdB"
      >
        10
        %
      </div>
      <div
        class="sc-dFtzxp ijcGKc"
        style="width: 10%;"
      >
        <div
          class="sc-gIDmLj dMSlCq"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-evcjhq gzaCbu sc-fHeRUh cTzQCH"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-brSvTw gdvvdB"
      >
        10
        %
      </div>
      <div
        class="sc-dFtzxp dFRHvW"
        style="width: 10%;"
      >
        <div
          class="sc-gIDmLj dMSlCq"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-evcjhq jQwmuH sc-fHeRUh cTzQCH"
      color="#fff"
    >
      <div
        class="sc-brSvTw gdvvdB"
      >
        10
        %
      </div>
      <div
        class="sc-dFtzxp ijcGKc"
        style="width: 10%;"
      >
        <div
          class="sc-gIDmLj dMSlCq"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
